Bug 207554. Crash in nshtmlselectoptionaccessible::getaccnextsibling(). r=kyle, sr=alecf